--- a/Source/Strive/UI/Strive.UI.csproj
+++ b/Source/Strive/UI/Strive.UI.csproj
@@ -220,6 +220,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Channels\ChannelManager.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Cursors\CursorManager.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
