--- a/Source/Strive/www.strive3d.net/Web.config
+++ b/Source/Strive/www.strive3d.net/Web.config
@@ -27,7 +27,8 @@
         <customErrors mode="Off" />
         <pages validateRequest="false" enableViewState="true"/>
         
-        <httpRuntime useFullyQualifiedRedirectUrl="true" />
+        <httpRuntime useFullyQualifiedRedirectUrl="true" maxRequestLength="100000" />
+
         
         <!-- Adapter configuration for mobile controls used in the portal -->
         <mobileControls>
