--- a/Source/Strive/Strive.Server/Strive.Server.Logic/Strive.Server.Logic.csproj
+++ b/Source/Strive/Strive.Server/Strive.Server.Logic/Strive.Server.Logic.csproj
@@ -92,10 +92,10 @@
       <Name>Strive.Server.Model</Name>
     </ProjectReference>
     <Reference Include="Common.Logging">
-      <HintPath>..\..\..\ThirdParty\Common.Logging-2.0.0\bin\net\2.0\release\Common.Logging.dll</HintPath>
+      <HintPath>..\..\..\ThirdParty\Common.Logging\Common.Logging.dll</HintPath>
     </Reference>
     <Reference Include="Common.Logging.Log4Net">
-      <HintPath>..\..\..\ThirdParty\Common.Logging-2.0.0\bin\net\2.0\release\Common.Logging.Log4Net.dll</HintPath>
+      <HintPath>..\..\..\ThirdParty\Common.Logging\Common.Logging.Log4Net.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
