--- a/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
@@ -12,7 +12,8 @@
     <AssemblyName>Strive.Client.NeoAxisView</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -129,6 +130,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Nameplates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
