--- a/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.ViewModel/Strive.Client.ViewModel.csproj
@@ -45,6 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InputBindings.cs" />
+    <Compile Include="ObservableDictionary.cs" />
+    <Compile Include="ObservableSortedDictionary.cs" />
+    <Compile Include="ObservableViewEntityDictionary.cs" />
     <Compile Include="Perspective.cs" />
     <Compile Include="WorldViewModel.cs" />
     <Compile Include="ViewEntity.cs" />
