Resource list loads from map

--- a/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
+++ b/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/Strive.Client.NeoAxisView.csproj
@@ -125,6 +125,7 @@
     <Reference Include="WindowsAppFramework">
       <HintPath>..\..\..\ThirdParty\NeoAxis\WindowsAppFramework.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
     <Reference Include="ZipArchive">
       <HintPath>..\..\..\ThirdParty\NeoAxis\ZipArchive.dll</HintPath>
     </Reference>
